@@ -1,5 +1,8 @@
 --- CHANGELOG ---
 
+--- PyFMI-2.6.1 ---
+    * Minor fix in handling bytes/str in Python 3
+
 --- PyFMI-2.6 ---
     * Fixed issue with log messages during the FMI methods terminate /
       free instance.
